[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
wtransport = "0.4"
tokio = { version = "1.37", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
time = "0.3"
x509-parser = "0.16"
serde_json = "1"
pem = "3"

[patch.crates-io]
wtransport = { path = "vendor/wtransport-0.4.0" }
