[package]
name = "streamer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "streamer"
path = "src/main.rs"

[dependencies]
wtransport = "0.4"
tokio = { version = "1.37", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
x264 = "0.3"
v4l = "0.14"
jpeg-decoder = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
serde_json = "1"

[patch.crates-io]
wtransport = { path = "vendor/wtransport-0.4.0" }
x264 = { path = "vendor/x264-0.3.0" }
x264-sys = { path = "vendor/x264-sys-0.1.0" }
